--- a/test.lang
+++ b/test.lang
@@ -1,12 +1,14 @@
-PRINT "HELLO WORLD"
-print "HELLO DEAR"
-
-1321
+#PRINT "HELLO WORLD"
+#print "HELLO DEAR"
+input "Enter some shitty input: " $input_var
+#1321
 
 $s_v = "wow"
 $n_v = 10+2
 
 $s_v_2 = $s_v
 
-print $n_v
-print $s_v_2
+#print $n_v
+#print $s_v_2
+print "this is input variable you entered idiot: %d" 
+print $input_var
